@@ -5,7 +5,7 @@
  * 
  * (c) Copyright 2003, 2004, 2005, 2006, 2007 Hewlett-Packard Development Company, LP
  * [See end of file]
- * $Id: TestFBRules.java,v 1.48 2007-01-10 17:07:48 der Exp $
+ * $Id: TestFBRules.java,v 1.49 2007-07-13 11:06:46 der Exp $
  *****************************************************************/
 package com.hp.hpl.jena.reasoner.rulesys.test;
 
@@ -35,7 +35,7 @@ import org.apache.commons.logging.LogFactory;
  * Test suite for the hybrid forward/backward rule system.
  * 
  * @author <a href="mailto:der@hplb.hpl.hp.com">Dave Reynolds</a>
- * @version $Revision: 1.48 $ on $Date: 2007-01-10 17:07:48 $
+ * @version $Revision: 1.49 $ on $Date: 2007-07-13 11:06:46 $
  */
 public class TestFBRules extends TestCase {
     
@@ -299,6 +299,33 @@ public class TestFBRules extends TestCase {
         assertFalse(inf.containsResource(A) || inf.containsResource(I));
     }
        
+    /**
+     * Test rebindAll reconsults a changed ruleset
+     */
+    public void testRebindAll() {
+        String NS = "http://jena.hpl.hp.com/example#";
+        List rules1 = Rule.parseRules( "(?x http://jena.hpl.hp.com/example#p ?y) -> (?x http://jena.hpl.hp.com/example#q ?y)." );
+        List rules2 = Rule.parseRules( "(?x http://jena.hpl.hp.com/example#q ?y) -> (?x http://jena.hpl.hp.com/example#r ?y)." );
+        Model m = ModelFactory.createDefaultModel();
+        Property p = m.createProperty(NS + "p");
+        Property q = m.createProperty(NS + "q");
+        Property r = m.createProperty(NS + "r");
+        Resource a = m.createResource(NS + "a");
+        Resource b = m.createResource(NS + "b");
+        Statement s1 = m.createStatement(a, p, b);
+        Statement s2 = m.createStatement(a, q, b);
+        Statement s3 = m.createStatement(a, r, b);
+        m.add(s1);
+        GenericRuleReasoner reasoner = new GenericRuleReasoner(rules1);
+        InfModel infModel = ModelFactory.createInfModel(reasoner, m);
+        reasoner.addRules(rules2);
+        TestUtil.assertIteratorValues(this, infModel.listStatements(a, null, (RDFNode)null), 
+                new Object[] {s1, s2});
+        ((FBRuleInfGraph)infModel.getGraph()).rebindAll();
+        TestUtil.assertIteratorValues(this, infModel.listStatements(a, null, (RDFNode)null), 
+                new Object[] {s1, s2, s3});
+    }
+    
     /**
      * Test the close operation.
      */
